# AutoCloverTheater

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MacInstall.spec  Makefile  MyApp_mac.spec  README.md  WinInstall.spec  docker-compose.yml  env.yaml  env.yaml.example  install.py  main.py  p.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_mac.spec  start.sh
.github/workflows/: Frontend.yml  build.yml
act/: __init__.py  install_utils.py
act/app/: api.py  http.py
act/app/webui/: html.html  (+2 more)
act/config/: app.py
act/runtime/: runtime.py
app/: SseService.py
config/: app.py
etc/: env.yaml.example
facades/App/: App.py
facades/Configs/: Config.py
facades/Constant/: Constant.py
facades/Detect/: AdventureDetect.py  BaseDetect.py  DetectLog.py  FlashBattleDetect.py  MainWindowDetect.py
facades/Emulator/: Emulator.py  EmulatorFacades.py  test_emulator.py
facades/Env/: Env.py
facades/Img/: ColorSearch.py  ImgColor.py  ImgO.py  ImgRead.py  ImgSearch.py
facades/Logx/: Logx.py
facades/Ocr/: Cnocr.py  MyCnocr.py  OcrTest.py
facades/Runner/: ItemCollectionRunner.py  Limit.py  RefineryRunner.py  RelicRunner.py  Runner.py  WorldTreeRunner.py  guildRunner.py
facades/Sse/: SseService.py
facades/Uiauto/: ui.py
facades/tool/: WorldTreeCard.py
mac/emulator/: bluestacks.py  mumu.py  mumu_test.py
src/app/: __init__.py  api.py  http.py  main.py
src/config/: app.py
src/runtime/: runtime.py
test/: collection.py  collectionTop.py  numberTest.py  ocr.py  refinery.py  relic.py  worldTree.py
win/emulator/: mumu.py
(+118 files in other folders)
